--- a/333473--308898/WebAPI/appsettings.json
+++ b/333473--308898/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenaConexion": "Data Source=(localDB)\\MSSQLLocalDB;Integrated security=true;Initial Catalog=Obligatorio-P3"
+    "cadenaConexion":"Server=tcp:jlujan-idh-p3.database.windows.net,1433;Initial Catalog=Obligatorio-P3;Persist Security Info=False;User ID=admin333473;Password=Qasd3141;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
 
