--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "urlBase": "https://localhost:7286/api"
+  "urlBase": "https://webapi20250626115058-a2cfc7d3h7hucdf3.centralus-01.azurewebsites.net/api"
 
 }
